clang/test/BSC/Negative/NullabilityCheck/if_stmt.cbs
// RUN: %clang_cc1 -verify %s

safe void test1(void) {
    int *borrow _Nullable p = nullptr;
    if (p != nullptr) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test2(void) {
    int a = 10;
    int *borrow _Nullable p = nullptr;
    if (p != nullptr) {
        *p = 10;
    } else {
        p = &mut a;
    }
    *p = 30;
}

safe void test3(void) {
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    if (p != nullptr && q != nullptr) {
        *p = 10;
        *q = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test4(void) {
    int a = 10;
    int b = 10;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    if (p != nullptr && q != nullptr) {
        *p = 10;
        *q = 10;
    } else {
        p = &mut a;
        q = &mut b;
    }
    *p = 30;
    *q = 30;
}

safe void test5(void) {
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    if (p != nullptr || q != nullptr) {
        *p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test6(void) {
    int a = 10;
    int b = 10;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    if (p != nullptr) {
        *p = 10;
        if (q != nullptr)
          *q = 10;
        else
          q = &mut b;
    } else {
        p = &mut a;
        if (q != nullptr)
          *q = 10;
        else
          q = &mut b;
    }
    *p = 30;
    *q = 30;
}

safe void test7(void) {
    int a = 10;
    int b = 10;
    int c = 10;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    int *borrow _Nullable m = nullptr;
    if (p != nullptr && q != nullptr && m != nullptr) {
        *p = 10;
        *q = 10;
        *m = 10;
    } else {
        p = &mut a;
        q = &mut b;
        m = &mut c;
    }
    *p = 30;
    *q = 30;
    *m = 30;
}

safe void test8(void) {
    int a = 10;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    int *borrow _Nullable m = nullptr;
    if (p != nullptr && q != nullptr && m != nullptr) {
        *p = 10;
        *q = 10;
        *m = 10;
    } else {
        *p = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
        *m = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *m = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test9(void) {
    int a = 10;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    int *borrow _Nullable m = nullptr;
    if (p != nullptr || q != nullptr || m != nullptr) {
        *p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *m = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *m = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *m = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test10(void) {
    int a = 0;
    int *borrow _Nullable p = nullptr;
    if (p != nullptr) {
        *p = 10;
        p = nullptr;
    } else {
        p = &mut a;
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test11(void) {
    int a = 0;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    if (p != nullptr && q != nullptr || a > 0) {
        *p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test12(void) {
    int a = 0;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    if (p != nullptr && q != nullptr && a > 0) {
        *p = 10;
        *q = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test13(void) {
    int a = 0;
    int b = 0;
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    if (p != nullptr && q != nullptr && a > 0) {
        *p = 10;
        *q = 10;
    } else {
        p = &mut a;
        q = &mut b;
    }
    *p = 30;
    *q = 30;
}

safe void test14(void) {
    int *borrow _Nullable p = nullptr;
    if (p) {
        *p = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test15(void) {
    int *borrow _Nullable p = nullptr;
    if (!p) {
        *p = 10; // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *p = 20;
    }
    *p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

safe void test16(void) {
    int *borrow _Nullable p = nullptr;
    int *borrow _Nullable q = nullptr;
    if (p && q) {
        *p = 10;
        *q = 10;
    } else {
        *p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *q = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *q = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

struct S {
    int a;
};
safe void test17(void) {
    struct S *borrow _Nullable p = nullptr;
    if (p != nullptr) {
        p->a = 10;
    } else {
        p->a = 20; // expected-error {{cannot access member through nullable pointer}}
    }
    p->a = 30;  // expected-error {{cannot access member through nullable pointer}}
}